docs/tests/parser/functions/invalid/FuncParamMissingName.b
fn int foo(int, float) {
}
